--- a/laptopshop/src/main/resources/templates/web/sign-up/index.html
+++ b/laptopshop/src/main/resources/templates/web/sign-up/index.html
@@ -51,6 +51,7 @@
 			                    	title="VD: admin@gmail.com"
 			                    	>
 			                    <input 
+			                    	autocomplete=""
 			                    	type="password" 
 			                    	placeholder="Password" 
 			                    	th:field="*{password}" 
