--- a/laptopshop/src/main/resources/templates/admin/user/index.html
+++ b/laptopshop/src/main/resources/templates/admin/user/index.html
@@ -203,7 +203,7 @@
 								</div>
 								<div class="form-group">
 									<label for="">Password</label> 
-									<input type="password" th:field="*{password}" class="form-control" required="required" />
+									<input autocomplete="" type="password" th:field="*{password}" class="form-control" required="required" />
 								</div>
 								<div class="form-group">
 									<label for="">Role</label> 
@@ -330,9 +330,9 @@
 			var totalPages = /*[[${totalPage}]]*/ "";
 			$(function () {
 				$('#pagination').twbsPagination({
-					totalPages: totalPages,
+					totalPages: (totalPages == null) ? 1:totalPages,
 					visiblePages: 3,
-					startPage: currentPage,
+					startPage: (currentPage == null) ? 1:currentPage,
 					onPageClick: function (event, page) {
 						if (currentPage != page) {
 							$('#page').val(page);
