--- a/laptopshop/src/main/resources/templates/web/store/index.html
+++ b/laptopshop/src/main/resources/templates/web/store/index.html
@@ -103,8 +103,7 @@
 									</th:block>
 									<th:block th:if="${listProduct}">
 										<ul class="pagination mt-4" id="pagination"></ul>
-										<input hidden="" id="page"  name="page" th:value="${currentPage}"/>
-										<input hidden="" id="totalPage" name="totalPage" th:value="${totalPage}"/>
+										<input hidden=""  id="page"  name="page" th:value="${currentPage}"/>
 									</th:block>
 								</div>
 							</div>
@@ -122,9 +121,9 @@
 			var totalPages = /*[[${totalPage}]]*/ "";
 			$(function () {
 				$('#pagination').twbsPagination({
-					totalPages: totalPages,
+					totalPages: (totalPages == null) ? 1:totalPages,
 					visiblePages: 3,
-					startPage: currentPage,
+					startPage: (currentPage == null) ? 1:currentPage,
 					onPageClick: function (event, page) {
 						if (currentPage != page) {
 							$('#page').val(page);
